"report check in 2018-10-28"

--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-24
+Run date: 2018-10-28
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-10-24
 [PRE-WARN]: Expected non-empty: ./stuwork/Marcus620/think-java-Marcus620
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
-Cloning into 'think-java-Marcus620'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,48 +19,20 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[ERROR] javac failed Date.java Date.java:1: error: class date is public, should be declared in a file named date.java
-	public class date {
-	       ^
-	1 error
-	
-[COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:1: error: class time is public, should be declared in a file named time.java
-	public class time{
-	       ^
-	1 error
-	
-[SUMMARY] 
-	['Date: COMPILE ERROR (- 0.10)'
-	 'Time: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.17)'
-	 'Exercise4: MISSING (- 0.17)']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-10.0
-	1.0606601717798212
-	5.298317366548037
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.47</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
