--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-24
+Run date: 2018-10-28
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-10-24
 [PRE-WARN]: Expected non-empty: ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
-Cloning into 'think-java-bealarson82'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,76 +19,20 @@ Cloning into 'think-java-bealarson82'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Hello World!
-	Day: tuesday
-	Date: 28
-	Month: august
-	Year: 2018
-	American Style: 
-	tuesday, august 28, 2018
-	European Style: 
-	tuesday 28 august 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Number of seconds since midnight: 
-	16259
-	Number of seconds remaining in the day: 
-	70141.0
-	Percentage of the day that has passed: 
-	18.818287%
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] javac failed Exercise3.java Exercise3.java:1: error: class, interface, or enum expected
-	pimport java.util.Scanner;
-	^
-	1 error
-	
-[COMPILING] Exercise4.java
-	[ERROR] javac failed Exercise4.java Exercise4.java:15: error: cannot find symbol
-			guess = sc.nextInt();
-			        ^
-	  symbol:   variable sc
-	  location: class Exercise4
-	1 error
-	
-[SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.10)'
-	 'Exercise4: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-	[ERROR] Runtime Error @ java Multadd
-
-[SUMMARY] 
-	['Multadd: RUNTIME ERROR (- 0.08)']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.72</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -100,35 +41,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[SUCCESSFUL COMPILE] Ch6Ex4.java
-[RUNNING] Ch6Ex4
--->
-
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -137,22 +53,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise1.java
-	[ERROR] javac failed Swettercise1.java Swettercise1.java:64: error: method main(String[]) is already defined in class Swettercise1
-		public static void main(String[] args) {
-		                   ^
-	Swettercise1.java:50: error: cannot find symbol
-		return reverseStr;
-		       ^
-	  symbol:   variable reverseStr
-	  location: class Swettercise1
-	2 errors
-	
-[SUMMARY] 
-	['Swettercise1: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -161,39 +65,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[TESTING WITH] TestCh7Ex3
-[COMPILING] TestCh7Ex3.java
-	[ERROR] javac failed TestCh7Ex3.java
- ----begin compile output------- 
-TestCh7Ex3.java:40: error: cannot find symbol
-	            int gotBack = Exercise3.indexOfMax(someInts);
-	                                   ^
-	  symbol:   method indexOfMax(int[])
-	  location: class Exercise3
-	1 error
-	
------------END COMPILE-------
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] TestCh7Ex4
-[COMPILING] TestCh7Ex4.java
-	[ERROR] javac failed TestCh7Ex4.java
- ----begin compile output------- 
-TestCh7Ex4.java:47: error: incompatible types: int cannot be converted to String[]
-	            boolean[] gotBack = Exercise4.sieve(n);
-	                                                ^
-	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.30)'
-	 'Exercise4: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -202,12 +77,9 @@ TestCh7Ex4.java:47: error: incompatible types: int cannot be converted to String
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[SUMMARY] 
-	['Exercise5: MISSING (- 0.50)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
