--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-24
+Run date: 2018-10-28
 <br>Student User: gaberoessler
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-10-24
 [PRE-WARN]: Expected non-empty: ./stuwork/gaberoessler/think-java-gaberoessler
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
-Cloning into 'think-java-gaberoessler'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,83 +19,20 @@ Cloning into 'think-java-gaberoessler'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Tuesday
-	28
-	August
-	2018
-	American Format: 
-	Tuesday, August 28, 2018
-	European Format: 
-	Tuesday 28 August 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-40305
-	49785
-	46.649307
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-How many seconds? 13 seconds = 0 hours, 0 minutes, and 0 seconds
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I'm thinking of a number between 1 and 100, inclusive.
-	Can you guess what it is?
-	Type your guess: Your guess is: 13
-	The number I was thinking of was: 70
-	You were off by: 57
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-The result is 5.0
-	The result is 1.0606601717798212
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -107,18 +41,10 @@ The result is 5.0
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[COMPILING] Exercise4.java
-	[ERROR] javac failed Exercise4.java Exercise4.java:3: error: non-static method isAbecedarian(String) cannot be referenced from a static context
-			isAbecedarian("java"); 
-			^
-	1 error
-	
-[SUMMARY] 
-	['Exercise4: COMPILE ERROR (- 0.30)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -127,17 +53,10 @@ The result is 5.0
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise.java
-	[ERROR] javac failed Swettercise.java Swettercise.java:19: error: ';' expected
-			System.out.println(str)
-			                       ^
-	1 error
-	
-[SUMMARY] 
-	['Swettercise1: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -146,12 +65,10 @@ The result is 5.0
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.50)'
-	 'Exercise4: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -160,12 +77,9 @@ The result is 5.0
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[SUMMARY] 
-	['Exercise5: MISSING (- 0.50)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
