--- a/stureports/think-java/kaifouts.think-java_results.html
+++ b/stureports/think-java/kaifouts.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-24
+Run date: 2018-10-28
 <br>Student User: kaifouts
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-10-24
 [PRE-WARN]: Expected non-empty: ./stuwork/kaifouts/think-java-kaifouts
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-kaifouts.git]
-Cloning into 'think-java-kaifouts'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,31 +19,7 @@ Cloning into 'think-java-kaifouts'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format:
-	Thursday, July 16, 2018
-	European Format:
-	Thursday 16 July 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Time:
-	11: 15: 31
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -56,32 +29,10 @@ Time:
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:6: error: <identifier> expected
-	System.out.println("Exercise 6...");
-	                  ^
-	Multadd.java:6: error: illegal start of type
-	System.out.println("Exercise 6...");
-	                   ^
-	Multadd.java:9: error: <identifier> expected
-			System.out.println("multAdd"
-			                  ^
-	Multadd.java:9: error: illegal start of type
-			System.out.println("multAdd"
-			                   ^
-	Multadd.java:9: error: ')' expected
-			System.out.println("multAdd"
-			                            ^
-	Multadd.java:12: error: ';' expected
-		public static double Multadd(double a, double b, double c){
-		      ^
-	6 errors
-	
-[SUMMARY] 
-	['Multadd: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.15</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -90,12 +41,10 @@ Time:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -104,32 +53,10 @@ Time:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise.java
-	[ERROR] javac failed Swettercise.java Swettercise.java:21: error: cannot find symbol
-				str = str = i = ", ";
-				^
-	  symbol:   variable str
-	  location: class Swettercise
-	Swettercise.java:21: error: cannot find symbol
-				str = str = i = ", ";
-				      ^
-	  symbol:   variable str
-	  location: class Swettercise
-	Swettercise.java:21: error: incompatible types: String cannot be converted to int
-				str = str = i = ", ";
-				                ^
-	Swettercise.java:23: error: cannot find symbol
-			System.out.println(str);
-			                   ^
-	  symbol:   variable str
-	  location: class Swettercise
-	4 errors
-	
-[SUMMARY] 
-	['Swettercise1: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -138,12 +65,10 @@ Time:
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.50)'
-	 'Exercise4: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -152,12 +77,9 @@ Time:
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[SUMMARY] 
-	['Exercise5: MISSING (- 0.50)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
