--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-24
+Run date: 2018-10-28
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-10-24
 [PRE-WARN]: Expected non-empty: ./stuwork/banjojeebus/think-java-banjojeebus
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
-Cloning into 'think-java-banjojeebus'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,29 +19,7 @@ Cloning into 'think-java-banjojeebus'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format: Tuesday,August 28,2018
-	European format: Tuesday 28 August 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds remaining: 39870
-	Percent of day passed: 53.854168
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -54,17 +29,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:10: error: ';' expected
-			double sqrtOfx
-			              ^
-	1 error
-	
-[SUMMARY] 
-	['Multadd: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.15</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -73,12 +41,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -87,11 +53,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[SUMMARY] 
-	['Swettercise1: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
