"report check in 2018-10-28"

--- a/stureports/think-java/KaylaRidesBikes.think-java_results.html
+++ b/stureports/think-java/KaylaRidesBikes.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-10-28
 [PRE-WARN]: Expected non-empty: ./stuwork/KaylaRidesBikes/think-java-KaylaRidesBikes
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-KaylaRidesBikes.git]
+Cloning into 'think-java-KaylaRidesBikes'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,20 +22,58 @@ Run date: 2018-10-28
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Format:
+	Tuesday, August 28, 2018
+	European Format:
+	Tuesday, 28 August, 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight:
+	36047
+	864047
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.17)'
+	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+Exercise 6:
+	multAdd( 5,6,7 ) = 37.0
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.67</b>
 
 <hr>
 
@@ -41,10 +82,12 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-	[ERROR] No chapter work for:chapter6
+[SUMMARY] 
+	['Exercise4: MISSING (- 0.50)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -53,10 +96,22 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Swettercise1.java
+	[ERROR] javac failed Swettercise1.java Swettercise1.java:23: error: cannot find symbol
+			System.out.println(aString);
+			                   ^
+	  symbol:   variable aString
+	  location: class Swettercise1
+	Swettercise1.java:43: error: incompatible types: unexpected return value
+				return i;
+				       ^
+	2 errors
+	
+[SUMMARY] 
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -65,10 +120,12 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.50)'
+	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -77,9 +134,12 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 </pre></body></html>
