--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-10-28
 [PRE-WARN]: Expected non-empty: ./stuwork/Marcus620/think-java-Marcus620
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
+Cloning into 'think-java-Marcus620'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,20 +22,48 @@ Run date: 2018-10-28
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[ERROR] javac failed Date.java Date.java:1: error: class date is public, should be declared in a file named date.java
+	public class date {
+	       ^
+	1 error
+	
+[COMPILING] Time.java
+	[ERROR] javac failed Time.java Time.java:1: error: class time is public, should be declared in a file named time.java
+	public class time{
+	       ^
+	1 error
+	
+[SUMMARY] 
+	['Date: COMPILE ERROR (- 0.10)'
+	 'Time: COMPILE ERROR (- 0.10)']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.17)'
+	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+10.0
+	1.0606601717798212
+	5.298317366548037
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.47</b>
 
 <hr>
 
