--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-10-28
 [PRE-WARN]: Expected non-empty: ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
+Cloning into 'think-java-bealarson82'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,20 +22,76 @@ Run date: 2018-10-28
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+Hello World!
+	Day: tuesday
+	Date: 28
+	Month: august
+	Year: 2018
+	American Style: 
+	tuesday, august 28, 2018
+	European Style: 
+	tuesday 28 august 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight: 
+	16259
+	Number of seconds remaining in the day: 
+	70141.0
+	Percentage of the day that has passed: 
+	18.818287%
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:1: error: class, interface, or enum expected
+	pimport java.util.Scanner;
+	^
+	1 error
+	
+[COMPILING] Exercise4.java
+	[ERROR] javac failed Exercise4.java Exercise4.java:15: error: cannot find symbol
+			guess = sc.nextInt();
+			        ^
+	  symbol:   variable sc
+	  location: class Exercise4
+	1 error
+	
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.10)'
+	 'Exercise4: COMPILE ERROR (- 0.10)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+	[ERROR] Runtime Error @ java Multadd
+
+[SUMMARY] 
+	['Multadd: RUNTIME ERROR (- 0.08)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.72</b>
 
 <hr>
 
@@ -41,10 +100,35 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] Ch6Ex4
+[COMPILING] Ch6Ex4.java
+	[SUCCESSFUL COMPILE] Ch6Ex4.java
+[RUNNING] Ch6Ex4
+-->
+
+	<br>Results for Exercise4.isAbecedarian()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Exercise4: PASSED - EXCELLENT!'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.50</b>
 
 <hr>
 
@@ -53,10 +137,17 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Swettercise1.java
+	[ERROR] javac failed Swettercise1.java Swettercise1.java:64: error: method main(String[]) is already defined in class Swettercise1
+		public static void main(String[] args) {
+		                   ^
+	1 error
+	
+[SUMMARY] 
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -65,10 +156,82 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:5: error: illegal start of expression
+	<<<<<<< HEAD
+	^
+	Exercise3.java:5: error: illegal start of expression
+	<<<<<<< HEAD
+	  ^
+	Exercise3.java:5: error: illegal start of expression
+	<<<<<<< HEAD
+	    ^
+	Exercise3.java:6: error: > expected
+			System.out.println(findLargeIndex(someArray));
+			^
+	Exercise3.java:6: error: ';' expected
+			System.out.println(findLargeIndex(someArray));
+			      ^
+	Exercise3.java:9: error: invalid method declaration; return type required
+		public static indexOfmax(int array[]){
+		              ^
+	Exercise3.java:15: error: ';' expected
+			return max
+			          ^
+	Exercise3.java:18: error: class, interface, or enum expected
+	=======
+	^
+	Exercise3.java:20: error: class, interface, or enum expected
+		}
+		^
+	Exercise3.java:22: error: class, interface, or enum expected
+		public static int indexOfmax(int[] n){
+		              ^
+	Exercise3.java:24: error: class, interface, or enum expected
+			int index = 0;
+			^
+	Exercise3.java:25: error: class, interface, or enum expected
+			for(int i = 0; i < n.length; i++){
+			^
+	Exercise3.java:25: error: class, interface, or enum expected
+			for(int i = 0; i < n.length; i++){
+			               ^
+	Exercise3.java:25: error: class, interface, or enum expected
+			for(int i = 0; i < n.length; i++){
+			                             ^
+	Exercise3.java:28: error: class, interface, or enum expected
+					index = n[0];
+					^
+	Exercise3.java:29: error: class, interface, or enum expected
+					index  = 1;
+					^
+	Exercise3.java:30: error: class, interface, or enum expected
+			}
+			^
+	Exercise3.java:32: error: class, interface, or enum expected
+		}
+		^
+	18 errors
+	
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] TestCh7Ex4
+[COMPILING] TestCh7Ex4.java
+	[ERROR] javac failed TestCh7Ex4.java
+ ----begin compile output------- 
+TestCh7Ex4.java:47: error: incompatible types: int cannot be converted to String[]
+	            boolean[] gotBack = Exercise4.sieve(n);
+	                                                ^
+	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
+	1 error
+	
+-----------END COMPILE-------
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.30)'
+	 'Exercise4: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.40</b>
 
 <hr>
 
@@ -77,9 +240,58 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[COMPILING] Exercise5.java
+	[ERROR] javac failed Exercise5.java Exercise5.java:4: error: ']' expected
+			int[a] = {2, 5, 10, 20, 25};
+			    ^
+	Exercise5.java:4: error: ';' expected
+			int[a] = {2, 5, 10, 20, 25};
+			     ^
+	Exercise5.java:4: error: not a statement
+			int[a] = {2, 5, 10, 20, 25};
+			          ^
+	Exercise5.java:4: error: ';' expected
+			int[a] = {2, 5, 10, 20, 25};
+			           ^
+	4 errors
+	
+[COMPILING] Exercise6.java
+	[ERROR] javac failed Exercise6.java Exercise6.java:7: error: cannot find symbol
+			System.out.print(arePrimeFactors);
+			                 ^
+	  symbol:   variable arePrimeFactors
+	  location: class Exercise6
+	Exercise6.java:24: error: cannot find symbol
+			for(int j = 2; y< w.length; j++){
+			               ^
+	  symbol:   variable y
+	  location: class Exercise6
+	2 errors
+	
+[COMPILING] Exercise8.java
+	[ERROR] javac failed Exercise8.java Exercise8.java:19: error: cannot find symbol
+				Arrays.sort(s1Array);
+				^
+	  symbol:   variable Arrays
+	  location: class Exercise8
+	Exercise8.java:20: error: cannot find symbol
+				Arrays.sort(s2Array);
+				^
+	  symbol:   variable Arrays
+	  location: class Exercise8
+	Exercise8.java:22: error: cannot find symbol
+				status = Arrays.equals(s1Array, s2Array);
+				         ^
+	  symbol:   variable Arrays
+	  location: class Exercise8
+	3 errors
+	
+[SUMMARY] 
+	['Exercise5: COMPILE ERROR (- 0.30)'
+	 'Exercise6: COMPILE ERROR (- 0.30)'
+	 'Exercise8: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.10</b>
 
 </pre></body></html>
