--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-10-28
 [PRE-WARN]: Expected non-empty: ./stuwork/gaberoessler/think-java-gaberoessler
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-gaberoessler.git]
+Cloning into 'think-java-gaberoessler'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,20 +22,83 @@ Run date: 2018-10-28
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+Tuesday
+	28
+	August
+	2018
+	American Format: 
+	Tuesday, August 28, 2018
+	European Format: 
+	Tuesday 28 August 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+40305
+	49785
+	46.649307
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[SUCCESSFUL COMPILE] Exercise3.java
+[RUNNING] Exercise3
+-->
+How many seconds? 13 seconds = 0 hours, 0 minutes, and 0 seconds
+<--
+	[OUTPUT OK]
+
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[RUNNING] Exercise4
+-->
+I'm thinking of a number between 1 and 100, inclusive.
+	Can you guess what it is?
+	Type your guess: Your guess is: 13
+	The number I was thinking of was: 6
+	You were off by: 7
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Exercise3: PASSED - EXCELLENT!'
+	 'Exercise4: PASSED - EXCELLENT!']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[COMPILING] Multadd.java
+	[SUCCESSFUL COMPILE] Multadd.java
+[RUNNING] Multadd
+-->
+The result is 5.0
+	The result is 1.0606601717798212
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Multadd: PASSED - EXCELLENT!']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 <hr>
 
@@ -41,10 +107,18 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Exercise4.java
+	[ERROR] javac failed Exercise4.java Exercise4.java:3: error: non-static method isAbecedarian(String) cannot be referenced from a static context
+			isAbecedarian("java"); 
+			^
+	1 error
+	
+[SUMMARY] 
+	['Exercise4: COMPILE ERROR (- 0.30)'
+	 'Exercise5: MISSING (- 0.50)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.20</b>
 
 <hr>
 
@@ -53,10 +127,17 @@ Run date: 2018-10-28
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-	[ERROR] No chapter work for:chapter6
+[COMPILING] Swettercise.java
+	[ERROR] javac failed Swettercise.java Swettercise.java:19: error: ';' expected
+			System.out.println(str)
+			                       ^
+	1 error
+	
+[SUMMARY] 
+	['Swettercise1: COMPILE ERROR (- 0.30)']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
@@ -65,10 +146,12 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.50)'
+	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -77,9 +160,12 @@ Run date: 2018-10-28
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 </pre></body></html>
