--- a/stureports/think-java/slammensam.think-java_results.html
+++ b/stureports/think-java/slammensam.think-java_results.html
@@ -11,6 +11,9 @@ Run date: 2018-10-28
 [PRE-WARN]: Expected non-empty: ./stuwork/slammensam/think-java-slammensam
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-slammensam.git]
+Cloning into 'think-java-slammensam'...
+	
+[GITWORK DONE]
 
 <hr>
 
@@ -19,20 +22,60 @@ Run date: 2018-10-28
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-	[ERROR] No chapter work for:chapter2
+[COMPILING] Date.java
+	[SUCCESSFUL COMPILE] Date.java
+[RUNNING] Date
+-->
+American Date:
+	Tuesday, August 28, 2018
+	European Date:
+	Tuesday 28 August 2018
+	
+<--
+	[OUTPUT OK]
+
+[COMPILING] Time.java
+	[SUCCESSFUL COMPILE] Time.java
+[RUNNING] Time
+-->
+Number of seconds since midnight: 
+	39650
+	Number of seconds remaining in the day: 
+	46750
+	Percentage of the day that has passed: 
+	0.45833334%
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Date: PASSED - EXCELLENT!'
+	 'Time: PASSED - EXCELLENT!']
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-	[ERROR] No chapter work for:chapter3
+[COMPILING] Exercise3.java
+	[ERROR] javac failed Exercise3.java Exercise3.java:3: error: class, interface, or enum expected
+	int inch;
+	^
+	Exercise3.java:4: error: class, interface, or enum expected
+	double cm;
+	^
+	2 errors
+	
+[SUMMARY] 
+	['Exercise3: COMPILE ERROR (- 0.10)'
+	 'Exercise4: MISSING (- 0.17)']
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-	[ERROR] No chapter work for:chapter4
+[SUMMARY] 
+	['Multadd: MISSING (- 0.17)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.57</b>
 
 <hr>
 
