"report check in 2018-10-30"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-28
+Run date: 2018-10-30
 <br>Student User: Crevin921
 <br>Project: think-java
 <br>
@@ -72,8 +72,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 85
-	you were off by -72
+	The number i was thinking of was: 8
+	you were off by 5
 	
 <--
 	[OUTPUT OK]
@@ -227,12 +227,24 @@ TestCh7Ex3.java:40: error: incompatible types: int[] cannot be converted to int
 	1 error
 	
 -----------END COMPILE-------
+[COMPILING] Exercise4.java
+	[SUCCESSFUL COMPILE] Exercise4.java
+[TESTING WITH] TestCh7Ex4
+[COMPILING] TestCh7Ex4.java
+	[ERROR] javac failed TestCh7Ex4.java
+ ----begin compile output------- 
+TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to boolean[]
+	            boolean[] gotBack = Exercise4.sieve(n);
+	                                               ^
+	1 error
+	
+-----------END COMPILE-------
 [SUMMARY] 
 	['Exercise3: COMPILE ERROR (- 0.30)'
-	 'Exercise4: MISSING (- 0.50)']
+	 'Exercise4: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.40</b>
 
 <hr>
 
