--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-28
+Run date: 2018-10-30
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -96,10 +96,12 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise3: MISSING (- 0.50)'
+	 'Exercise4: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 <hr>
 
@@ -108,9 +110,12 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-	[ERROR] No chapter work for:chapter7
+[SUMMARY] 
+	['Exercise5: MISSING (- 0.50)'
+	 'Exercise6: MISSING (- 0.50)'
+	 'Exercise8: MISSING (- 0.50)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] 0.00</b>
 
 </pre></body></html>
