--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-28
+Run date: 2018-10-30
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 73
-	You were off by: 60
+	THe number I was thinkin of is: 61
+	You were off by: 48
 	
 <--
 	[OUTPUT OK]
@@ -170,7 +170,7 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-12, 6, 3, 10, 5, 16, 8, 4, 2, 4, 2, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 
+12, 6, 3, 10, 5, 16, 8, 4, 2, 14, 2, 111, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1
 	<br>Results for reverseStr()
 	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -179,9 +179,9 @@ Im thinking of a number between 1-100, can you guess it?
 	</table><br>
 	
 	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">Raised Exception</td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left"></td><td bgcolor="red"><b>12, 6, 3, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left"></td><td bgcolor="red"><b>4, 2, 1 </b></td></tr>
+	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left"></td><td bgcolor="red"><b>11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1 </b></td></tr>
 	</table><br>
 	
 	<br>Results for isPrime()
@@ -193,17 +193,17 @@ Im thinking of a number between 1-100, can you guess it?
 	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.15000000000000002]
+	[deductions=0.09]
 	
 	
 <--
 	[OUTPUT OK]
 
 [SUMMARY] 
-	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+	['Swettercise1: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">0.85</font></b>
+<b>          [SCORE] <font color="green">0.91</font></b>
 
 <hr>
 
@@ -237,53 +237,17 @@ Im thinking of a number between 1-100, can you guess it?
 	[OUTPUT OK]
 
 [COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] TestCh7Ex4
-[COMPILING] TestCh7Ex4.java
-	[SUCCESSFUL COMPILE] TestCh7Ex4.java
-[RUNNING] TestCh7Ex4
--->
-2
-	2
-	3
-	2
-	3
-	2
-	3
-	5
-	2
-	3
-	5
-	2
-	3
-	5
-	7
-	2
-	3
-	5
-	7
+	[ERROR] javac failed Exercise4.java Exercise4.java:13: error: int cannot be dereferenced
+	           for (int i = 2;i<num.length-1; i++) {
+	                               ^
+	1 error
 	
-	<br>Chapter7, Exercise4.indexOfMax()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false, true]</td><td bgcolor="red"><b>[false, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true, true]</td><td bgcolor="red"><b>[false, false, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true, false]</td><td bgcolor="red"><b>[false, false, true, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false] </b></td></tr>
-	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false, true] </b></td></tr>
-	</table><br>
-	[deductions=0.21]
-	
-	
-<--
-	[OUTPUT OK]
-
 [SUMMARY] 
 	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+	 'Exercise4: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.79</b>
+<b>          [SCORE] 0.70</b>
 
 <hr>
 
